--- a/4-colorTexture/buffer_interleaved.html
+++ b/4-colorTexture/buffer_interleaved.html
@@ -7,7 +7,7 @@
 <body>
 <h3>用一个缓冲区交叉存储顶点尺寸颜色数据，适合数据量大的情况</h3>
 <canvas id="canvas" width="400" height="400"></canvas>
-<script src="../js/webgl.js"></script>
+<script src="../../graphics/webgl-util.js"></script>
 <script type="x-shader/x-vertex" id="vs">
 	attribute vec4 a_Position; //限定符，类型(4个浮点数的矢量)，变量名称：顶点，attribute变量传输与顶点有关的数据，表示逐顶点的信息(顶点依次传递给它的意思) 
 	attribute float a_PositionSize;
