--- a/6-light/animate_lighted_cube.html
+++ b/6-light/animate_lighted_cube.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <canvas id="canvas" width="400" height="400"></canvas>
-<script src="../js/webgl.js"></script>
-<script src="../js/matrix.js"></script>
+<script src="../../graphics/webgl-util.js"></script>
+<script src="../../graphics/matrix.js"></script>
 <script type="x-shader/x-vertex" id="vs">
   attribute vec4 a_Position;
   attribute vec4 a_Color;
