--- a/7-advanced/shadow_demo.html
+++ b/7-advanced/shadow_demo.html
@@ -57,7 +57,7 @@
     void main() {
         gl_Position = u_mvpMatrix * a_position; // 当前视点观察到的坐标
         v_positionFromLight = u_mvpMatrixFromLight * a_position;//光源坐标系下的位置,传给片元着色器，xy用于查找阴影纹理颜色，z是之后用于比较的深度值
-        v_position = vec3(u_modelMatrix * a_position);
+        v_position = vec3(u_modelMatrix * a_position);//顶点在世界坐标系中的位置
         v_normal = normalize(vec3(u_normalMatrix * a_normal));
         v_color = a_color;
     }
