--- a/7-advanced/polygon.html
+++ b/7-advanced/polygon.html
@@ -97,7 +97,7 @@ function main() {
     }
 
     var program = createProgramInfo(gl, ['vs', 'fs']),
-        sphereBuffer = createBufferInfoFromArrays(gl, Sphere(50)),
+        sphereBuffer = createBufferInfoFromArrays(gl, Sphere(1,50)),
         cubeBuffer = createBufferInfoFromArrays(gl, Cube()),
         cylinderBuffer = createBufferInfoFromArrays(gl, Cylinder(1, 3, 40)),
         coneBuffer = createBufferInfoFromArrays(gl, Cone(1, 3, 40)),
@@ -118,6 +118,7 @@ function main() {
 
     gl.clearColor(0.1, 0.1, 0.1, 1);
     gl.enable(gl.DEPTH_TEST);
+    gl.enable(gl.CULL_FACE);
     gl.viewport(0, 0, canvas.width, canvas.height); //设置绘图区域
 
     gl.useProgram(program.program);
@@ -193,7 +194,7 @@ function main() {
                 u_mvpMatrix: mvpMatrix.elements
             });
 
-            gl.drawElements(gl.TRIANGLES, buffer.count, buffer.indexType, 0);
+            drawBufferInfo(gl,buffer);
         });
 
         requestAnimationFrame(animate);
@@ -202,13 +203,13 @@ function main() {
 
 
 canvas.addEventListener('mousedown', function(e) {
-    START = WindowToCanvas(canvas, e.clientX, e.clientY);
+    START = windowToCanvas(canvas, e.clientX, e.clientY);
     canvas.addEventListener('mousemove', mouseMove, false);
     canvas.addEventListener('mouseup', mouseUp, false);
 }, false);
 
 function mouseMove(e) {
-    var end = WindowToCanvas(canvas, e.clientX, e.clientY),
+    var end = windowToCanvas(canvas, e.clientX, e.clientY),
         a = Math.sqrt(Math.pow(START.x - CENTER.x, 2) + Math.pow(START.y - CENTER.y, 2)),
         b = Math.sqrt(Math.pow(end.x - CENTER.x, 2) + Math.pow(end.y - CENTER.y, 2)),
         radX = (START.x - end.x) * 0.01,
